@@ -20,6 +20,9 @@ use = egg: kiloeyes#metric_validator
 [filter:meter_validator]
 use = egg: kiloeyes#meter_validator
 
+[filter:keystone_augmenter]
+use = egg: kiloeyes#keystone_augmenter
+
 [server:main]
 use = egg:gunicorn#main
 host = 0.0.0.0
